# ai

./: .envrc  .justfile  Cargo.toml  README.md  rustfmt.toml
examples/: test-api.rs
src/: anthropic.rs  errors.rs  lib.rs  prelude.rs  tracing.rs  tui.rs
src/anthropic/: client.rs  mod.rs  models.rs  stream.rs  streamtest.rs
src/futs/: async_stream.rs  generate.rs  map.rs  mod.rs  repeat.rs  timed.rs
