[package]
name = "ai"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.93"
async-stream = "0.3.6"
base64 = "0.22.1"
chrono = "0.4.38"
clap = { version = "4.5.21", features = ["derive"] }
eventsource-stream = "0.2.3"
futures = "0.3.31"
futures-util = "0.3.31"
mime_guess = "2.0.5"
pin-project = "1.1.7"
reqwest = { version = "0.12.9", features = ["json", "multipart", "stream"] }
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
thiserror = "2.0.3"
tokio = { version = "1.41.1", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["ansi", "env-filter", "fmt", "json"] }
tracing-test = "0.2.5"
url = "2.5.4"
